2012-01-26 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Add test for XML generation of arguments.
	* Source/DKArgument.h
	* Source/DKArgument.m: Small tweaks to XML generation.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Improve last commit.
	* configure: Regenerate.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: When selecting an Objective-C compiler, prefer the
	value of $CC if $OBJC is not set. Also, if the user does not specify
	a specific compiler and clang is installed, default to using clang.
	* config.make.in: Update for new compiler selection.
	* configure: Regenerate.

2011-10-09 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/GNUmakefile
	* Documentation/dk_make_protocol.1
	* Documentation/GNUmakefile.postamble:
	Add manpage for dk_make_protocol. 

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.m: Fix memory leak.
	* Source/DKNotificationCenter.m: Rearrange to silence invalid warning
	about use-after-free.

	Bugfixes for problems detected by clang's static analyser.

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Absence of the change notification annotation in
	the introspection data implies that the property sends change
	notifications (per D-Bus spec).

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Add a special case for conversions to bool for
	compliance with the D-Bus specification.

2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKBoxingUtils.m:
	Small bugfixes for problems detected by clang.

2011-10-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.h: Expose change notification check method.
	* Source/DKProxy.m: Implement -automaticallyNotifiesObserversForKey:

	Start working on KVO support.

2011-10-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Implement check whether the property emits change